- aligned IMDB and rotten tomato icons correctly with their respective text and spacing - inserted horizontal line that extends slightly beyond the heading text under “MORE INFO” and “INTERSTELLAR,” - increased the size of both icons

--- a/frontend/stylesheets/personaliseswipe.css
+++ b/frontend/stylesheets/personaliseswipe.css
@@ -1,38 +1,38 @@
 .light {
     --primary-color: white;
     --secondary-color: rgb(184, 182, 182);
-    --tertiary-color:black;
+    --tertiary-color: black;
     --text-color: black;
-    --text-shadow:rgb(242, 241, 241);
+    --text-shadow: rgb(242, 241, 241);
     --title-color: #353434;
-    --secondary-title-color:#212121;
-    --hover-color:#666565;
-    --outline-color:#dddddd;
-    --secondary-background-color:#000000;
-    --nextbutton-color:rgb(63, 63, 63);
-    --nextbutton-text-color:white;
-    --buttomform-section:#dddddd;
-    --buttongradient-left-color:#cd42e2;
-    --buttongradient-right-color:#3fcfda;
+    --secondary-title-color: #212121;
+    --hover-color: #666565;
+    --outline-color: #dddddd;
+    --secondary-background-color: #000000;
+    --nextbutton-color: rgb(63, 63, 63);
+    --nextbutton-text-color: white;
+    --buttomform-section: #dddddd;
+    --buttongradient-left-color: #cd42e2;
+    --buttongradient-right-color: #3fcfda;
 }
 
 .dark {
     --primary-color: #3A3A3A;
     --secondary-color: #2B2B2B;
-    --tertiary-color:black;
+    --tertiary-color: black;
     --text-color: white;
-    --text-shadow:black;
+    --text-shadow: black;
     --title-color: #cacaca;
-    --secondary-title-color:#E3E2E2;
-    --hover-color:#303030;
-    --outline-color:#767676;
-    --secondary-background-color:#aaa;
-    --nextbutton-color:rgb(43, 43, 43);
-    --nextbutton-text-color:white;
-    --nextbutton-outline-color:rgb(85, 85, 85);
-    --buttomform-section:#3A3A3A;
-    --buttongradient-left-color:#f272ff;
-    --buttongradient-right-color:#6dd5fa;
+    --secondary-title-color: #E3E2E2;
+    --hover-color: #303030;
+    --outline-color: #767676;
+    --secondary-background-color: #aaa;
+    --nextbutton-color: rgb(43, 43, 43);
+    --nextbutton-text-color: white;
+    --nextbutton-outline-color: rgb(85, 85, 85);
+    --buttomform-section: #3A3A3A;
+    --buttongradient-left-color: #f272ff;
+    --buttongradient-right-color: #6dd5fa;
 }
 
 
@@ -81,10 +81,9 @@ body {
 .main-subtitle {
     font-style: italic;
     font-size: 0.7rem;
-    /* color: #cacaca; */
-    color: var( --title-color)
-
+    color: var(--title-color)
 }
+
 .intro-section {
     text-align: center;
     margin-bottom: 3rem;
@@ -97,136 +96,153 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 /* styling for personalise swipe section bellow */
 
 .matchmaker-grid {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  align-items: center;
-  gap: 0rem;
-  justify-content: center;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    align-items: center;
+    gap: 0rem;
+    justify-content: center;
 
 }
 
 .info-panel {
-  padding:1.5rem;
-  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
-  border: 0.15rem solid;
-  color: white;
-  text-align: left;
-  width: 100%;
-  max-width: 25rem;
-  text-align: top;
-  display: flex;
-  flex-direction: column;
-font-family: Cantarell;
-background-color: #2B2B2B;
+    padding: 1.5rem;
+    border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
+    border: 0.15rem solid;
+    color: white;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    max-width: 25rem;
+    text-align: top;
+    display: flex;
+    flex-direction: column;
+    font-family: Cantarell;
+    background-color: #2B2B2B;
 }
 
 .left-panel {
-  border-color: #E273FF transparent #E273FF #E273FF;
-  border-radius: 1.5rem 0rem 0rem 1.5rem;
+    border-color: #E273FF transparent #E273FF #E273FF;
+    border-radius: 1.5rem 0rem 0rem 1.5rem;
+
 }
 
 .right-panel {
-  border-color: #90F0FF #90F0FF  #90F0FF  transparent;
-  border-radius: 0rem 1.5rem 1.5rem 0rem;
+    border-color: #90F0FF #90F0FF #90F0FF transparent;
+    border-radius: 0rem 1.5rem 1.5rem 0rem;
 }
 
 .poster-container {
-  border-radius: 1rem;
-  overflow: hidden;
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0rem 0rem 1rem rgba(255, 255, 255, 0.3);
 }
 
 .movie-poster {
-  max-height: 37rem;
-  border-radius: 1rem;
+    max-height: 37rem;
+    border-radius: 1rem;
 }
 
 
 .info-panel h2 {
-  font-size: 2rem;
-  border-bottom: 0.2rem solid #8D8D8D;
-  padding-bottom: 0.5rem;
-  margin-bottom: 1rem;
-  font-family: Cantarell;
+    font-size: 2rem;
+    margin-bottom: 0.2rem;
+    font-family: Cantarell;
 }
 
 .info-line {
-  display: flex;
-  gap: 0.5rem;
-  margin-bottom: 1rem;
+    display: flex;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .tag {
-  background-color: #444;
-  padding: 0.3rem 0.7rem;
-  border-radius: 1rem;
-  font-size: 0.9rem;
+    background-color: #444;
+    padding: 0.3rem 0.7rem;
+    border-radius: 1rem;
+    font-size: 0.9rem;
 }
 
 .info-field {
-  margin: 0.4rem 0;
-  font-size: 1.1rem;
+    margin: 0.4rem 0;
+    font-size: 1.1rem;
 }
 
 .ratings {
-  display: flex;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+.rating-styling{
+     display: flex;
   align-items: center;
   gap: 0.5rem;
 }
 
-.rating-icon {
-  height: 1.2rem;
+.rating-icon-tomato {
+    height: 1.5rem;
 }
+
+.rating-icon-IMDB {
+    height: 2rem;
+}
+
 
 .description {
-  margin-bottom: 1rem;
-  font-size: 1.1rem;
-  line-height: 1.4;
+    margin-bottom: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.4;
 }
 
-.buttons{
+.buttons {
     display: flex;
     flex-direction: row;
     gap: 2rem;
 }
 
 .stream-button {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .stream-icon {
-  height: 2.1rem;
-  width: 2.1rem;
-  border-radius: 0.5rem;
-  padding-left:0.3rem;
+    height: 2.1rem;
+    width: 2.1rem;
+    border-radius: 0.5rem;
+    padding-left: 0.3rem;
 }
 
 .action-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 11rem;
-  margin-top: 0.5rem;
+    display: flex;
+    justify-content: center;
+    gap: 11rem;
+    margin-top: 0.5rem;
 }
 
-.tickcross-button{
+.tickcross-button {
     background-color: transparent;
     border: none;
-    border-radius:20rem;
+    border-radius: 20rem;
 }
 
-.tickcross-button:hover{
-  transform: scale(1.05);
-  background-color: var(--hover-color);
+.tickcross-button:hover {
+    transform: scale(1.05);
+    background-color: var(--hover-color);
 
 }
 
 /* added */
-.watch-trailer{
-      display: flex;
+.watch-trailer {
+    display: flex;
     flex-direction: column;
 }
-
+.heading-underline {
+  width: 95%;
+  /* margin-left: -3%; */
+  height: 0.15rem;
+  background-color: #8D8D8D;
+}
